# make-a-pod

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: audio_gen.py  git_processor.py  schemas.py  settings.py  ui.py
database/: 2023_08_01-how_to_do_great_work-paulgraham_com.json  2023_08_11-patterns_for_building_llm-based_systems_&_products-eugeneyan_com_writing.json  2023_08_17-1_progressive_web_apps-web_dev_learn_pwa.json  2023_08_17-is_it_worth_being_wise-www_paulgraham_com.json  2023_08_17-learn_pwa-web_dev_learn.json  2023_08_22-2_getting_started-web_dev_learn_pwa.json  2023_08_23-3_foundations-web_dev_learn_pwa.json  2023_10_09-mitigating_llm_hallucinations:_a_multifaceted_approach-amatriain_net_blog.json  2023_10_09-technical_debt_quadrant-martinfowler_com_bliki.json  2023_11_04-conversations_on_customer_feedback:_bruce_mccarthy-foldingburritos_com_blog_customer-feedback-conversations.json  2023_11_04-conversations_on_customer_feedback:_ellen_chisa-foldingburritos_com_blog_customer-feedback-conversations.json  2023_11_04-hitting_the_high_notes-www_joelonsoftware_com_2005_07_25.json  2023_11_04-startup_advice,_briefly_-_sam_altman-blog_samaltman_com.json  2023_11_04-the_phone_screen-www_joelonsoftware_com_2006_10_24.json  2023_11_04-what_i've_learned_from_users_-_paul_graham-www_paulgraham_com.json
deployment/: podcaster.Dockerfile  ui.Dockerfile
tests/: test_schemas.py
